<resources>
    <string name="app_name">Tarea03</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="mail">e-mail</string>
    <string name="repeatPassword">Repetir contaseña</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="accept">Aceptar</string>
    <string name="signup">Registrarse</string>
    <string name="admin">Administrador</string>
    <string name="normal">Normal</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Next">Siguiente</string>
    <string name="Product">Producto</string>
    <string name="PostaCode">Código postal</string>
    <string name="Locality">Localidad</string>
    <string name="Address">Dirección</string>
    <string name="FinishOrder">Finalizar pedido</string>
    <string name="ViewPendingOrders">Ver pedidos en trámite</string>
    <string name="ViewRejectedOrders">Ver pedidos rechazados</string>
    <string name="Reject">Rechazar</string>
    <string name="Edit">Editar usuario</string>
</resources>
