<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FinishOrder">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="554dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtOrderSummary"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:text="TextView" />

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtLocality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Locality"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PostaCode"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnFinishOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FinishOrder" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>